fix: scrollbar on nav (#15)

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -365,7 +365,7 @@ nav:after {
 
 .nav-switcher {
   width: 100%;
-  overflow-x: scroll;
+  overflow-x: auto;
   overflow-y: hidden;
   border-radius: inherit;
   display: flex;
